--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"/>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="images/logo-dark-small2x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Xintrection " />
-      <link rel="stylesheet" href="assets/css/dashlite.css?ver=2.2.0" />
-    <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
+      <link rel="stylesheet" href="assets/css/dashlite.css" />
+    <link id="skin-default" rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/energy.css" />
 
 
@@ -35,12 +35,12 @@
  
 
   </body>
-  <script src="assets/js/bundle.js?ver=2.2.0"></script>
-  <script src="assets/js/scripts.js?ver=2.2.0"></script>
-  <script src="assets/js/charts/chart-crypto.js?ver=2.2.0"></script>
+  <script src="assets/js/bundle.js"></script>
+  <script src="assets/js/scripts.js"></script>
+  <script src="assets/js/charts/chart-crypto.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <script  src="assets/js/energy.js"></script>
-  <script src="assets/js/libs/jkanban.js?ver=2.2.0"></script>
-  <script src="assets/js/apps/kanban.js?ver=2.2.0"></script>
+  <script src="assets/js/libs/jkanban.js"></script>
+  <script src="assets/js/apps/kanban.js"></script>
  
 </html>
