--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Xintrection " />
       <link rel="stylesheet" href="assets/css/dashlite.css" />
       
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
     <link rel="stylesheet" href="assets/css/energy.css" />
 
