--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,6 @@
     <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
     <link rel="stylesheet" href="assets/css/energy.css" />
 
-
-
-
-
-
-
 <!-- JavaScripts -->
 
 
@@ -26,7 +20,7 @@
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"/>
     <title>ANALOG (ANA) Inceptive : Initial Asset Offering of INRX Network Ecosystem.  </title>
   </head>
-  <body class="nk-body npc-crypto bg-white has-sidebar nav-show">
+  <body class="nk-body npc-crypto bg-white has-sidebar nav-show" id="myBody">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"/></div>
     <!--
