--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
     <link rel="stylesheet" href="assets/css/energy.css" />
+    <!-- Progress Bar -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
 <!-- JavaScripts -->
 
@@ -33,7 +36,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
- 
+   
 
   </body>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
@@ -46,6 +49,7 @@
   <script src="assets/js/libs/jkanban.js"></script>
   <script src="assets/js/apps/kanban.js"></script>
   <script src="assets/js/demo-settings.js"></script>
+
 
 
   
