--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
   <script src="assets/js/libs/jkanban.js"></script>
   <script src="assets/js/apps/kanban.js"></script>
   <script src="assets/js/demo-settings.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
   <script>
     document.querySelector(".nk-wrap").addEventListener('click',()=>{
