--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
 
 <!-- JavaScripts -->
 
-
+<link rel="stylesheet" href="./assets/css/modifiers.css">
 <!-- Online Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Montserrat:300,400,500,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"/>
     <title>ANALOG (ANA) Inceptive : Initial Asset Offering of INRX Network Ecosystem.  </title>
   </head>
-  <body class="nk-body npc-crypto bg-white has-sidebar nav-show" id="myBody">
+  <body class="nk-body npc-crypto  has-sidebar nav-show" id="myBody">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"/></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
