--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <!-- Progress Bar -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- Progress Bar 2 -->
+  <link rel="stylesheet" href="https://unpkg.com/react-rangeslider/umd/rangeslider.min.css" />
 
 <!-- JavaScripts -->
 
@@ -51,6 +53,8 @@
   <script src="assets/js/apps/kanban.js"></script>
   <script src="assets/js/demo-settings.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Progress Bar  -->
+  <script src="https://unpkg.com/react-rangeslider/umd/rangeslider.min.js"></script>
   
   <script>
     document.querySelector(".nk-wrap").addEventListener('click',()=>{
