new pages UI and images

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
   <link rel="stylesheet" href="assets/css/energy.css" />
+  
+  <!-- Data Table CSS -->
+  <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+
   <!-- Progress Bar -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -59,6 +63,9 @@
 <script src="assets/js/apps/kanban.js"></script>
 <script src="assets/js/demo-settings.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- Data Table -->
+<script src='https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js'></script>
+
 
 <script>
   document.querySelector(".nk-wrap").addEventListener('click', () => {
@@ -86,6 +93,8 @@
 
     // } 
 </script>
+
+
 
 
 
