fix notification and redux

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
 <body class="nk-body npc-crypto bg-white has-sidebar nav-show" id="myBody">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" />
+  <div style="overflow-y: hidden;" id="root"/>
   </div>
   <!--
       This HTML file is a template.
