fix share option

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/logo-dark-small2x.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Xintrection " />
+  <meta name="description" content="Analog Inceptive" />
   <link rel="stylesheet" href="assets/css/dashlite.css" />
 
   
