fix setting button

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <title>ANALOG (ANA) Inceptive : Initial Asset Offering of INRX Network Ecosystem. </title>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
+  <script>src="/worker.js"</script>
   
 </head>
 
