--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <meta charset="utf-8" />
@@ -9,12 +10,25 @@
   <meta name="description" content="Analog Inceptive" />
   <link rel="stylesheet" href="assets/css/dashlite.css" />
 
-  
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {
+          pageLanguage: "en", includedLanguages: "en,es,ar,zh-CN,fr",
+          layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT,
+        },
+        "google_translate_element"
+      );
+    }
+  </script>
+
+  <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <link id="skin-default" rel="stylesheet" href="assets/css/theme.css?ver=2.2.0" />
   <link rel="stylesheet" href="assets/css/energy.css" />
-  
+
   <!-- Data Table CSS -->
   <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
 
@@ -23,7 +37,8 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
   <!-- JavaScripts for Clock -->
-  <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+  <script
+    src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
@@ -34,13 +49,13 @@
   <title>ANALOG (ANA) Inceptive : Initial Asset Offering of INRX Network Ecosystem. </title>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
-  <script>src="/worker.js"</script>
-  
+  <script>src = "/worker.js"</script>
+
 </head>
 
 <body class="nk-body npc-crypto bg-white has-sidebar no-touch nk-nio-theme" id="myBody">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"/>
+  <div id="root" />
   </div>
   <!--
       This HTML file is a template.
@@ -69,8 +84,8 @@
 <script src='https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js'></script>
 
 
- <script>
-      
+<script>
+
   // document.querySelector(".nk-wrap").addEventListener('click', () => {
 
   //   var element1 = document.getElementById("myBody");
@@ -94,7 +109,7 @@
   // }) 
 
 
-    
+
 </script>
 
 
