--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-
+  <!-- <script src="cards-scroller.js"></script> -->
   <!-- Online Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Montserrat:300,400,500,600,700,800"
     rel="stylesheet" />
@@ -50,6 +50,7 @@
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
   <script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
   <script>src = "/worker.js"</script>
+  
 
 </head>
 
