--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Analog Inceptive" />
   <link rel="stylesheet" href="assets/css/dashlite.css" />
-  <script src="http://static.geetest.com/v4/gt4.js"></script>
+  <script src="https://static.geetest.com/v4/gt4.js"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
@@ -66,7 +66,7 @@
       product: "bind",
       language: "en",
       outside: true,
-      // bgColor:"blue"
+      protocol: "https://"
     }, function (gt) {
 
       gt.onReady(function () {
@@ -74,13 +74,13 @@
         // alert("captcha is ready")
         const btn = document.getElementById("verify-captcha");
         btn.addEventListener("click", () => {
+          // console.log("show BOX");
           gt.showBox();
         })
       })
         .onSuccess(function (e) {
           var result = gt.getValidate();
-          const a = result.captcha_id
-          console.log("mydata::", result);
+          // console.log("mydata::", result);
           fetch('https://api.analog.live/api/captchaVerify', {
             method: 'POST',
             headers: {
@@ -91,6 +91,7 @@
           }).then((res) => {
              res.json().then((data) =>{
               localStorage.setItem("captcha", data.data)
+              // console.log("set localstoreage");
               // console.log(data.data, "response")
             });
           })
